--- a/.eslintignore
+++ b/.eslintignore
@@ -1,18 +1,20 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+.env
 # dependencies
-node_modules
-.pnp
+/node_modules
+/.pnp
 .pnp.js
 
 # testing
-coverage
+/coverage
 
 # next.js
-.next
-out
+/.next/
+/out/
 
 # production
-build
+/build
 
 # misc
 .DS_Store
@@ -32,16 +34,6 @@ yarn-error.log*
 # vercel
 .vercel
 
-.eslintcache
-
-yarn.lock
-
-# Sentry
-.sentryclirc
-
-# Sentry
-.sentryclirc
-
-#iisnode
-iisnode
-.env
+# next-sitemap
+robots.txt
+sitemap.xml
