--- a/.prettierignore
+++ b/.prettierignore
@@ -1,18 +1,23 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-node_modules
-.pnp
+/node_modules
+/.pnp
 .pnp.js
 
 # testing
-coverage
+/coverage
 
 # next.js
 .next
-out
+/.next/
+
+.yarn
+dist
+/out/
 
 # production
-build
+/build
 
 # misc
 .DS_Store
@@ -24,6 +29,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
+.env
 .env.local
 .env.development.local
 .env.test.local
@@ -32,16 +38,5 @@ yarn-error.log*
 # vercel
 .vercel
 
-.eslintcache
-
-yarn.lock
-
-# Sentry
-.sentryclirc
-
-# Sentry
-.sentryclirc
-
-#iisnode
-iisnode
-.env
+# changelog
+CHANGELOG.md
