--- a/package.json
+++ b/package.json
@@ -1,22 +1,83 @@
 {
   "private": true,
+  "name": "intranet-amaranzero-pkg",
+  "version": "0.0.1",
+  "description": "Deploy a commercial Next.js application with pkg and docker.",
+  "author": "Victor Evangelista <victor.evangelista2010@gmail.com>",
+  "bin": "server.js",
+  "pkg": {
+    "targets": [
+      "node12-linux-x64",
+      "node12-win-x64"
+    ],
+    "assets": [
+      ".next/**/*"
+    ],
+    "scripts": [
+      ".next/dist/**/*.js"
+    ]
+  },
   "scripts": {
-    "dev": "next dev",
+    "debug": "node --inspect-brk ./node_modules/next/dist/bin/next",
+    "develop": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start -p 80 -H 10.10.10.5",
+    "lint": "next lint",
+    "lint:fix": "eslint src --fix && yarn format",
+    "lint:strict": "eslint --max-warnings=0 src",
+    "typecheck": "tsc --noEmit --incremental false",
+    "format": "prettier -w .",
+    "format:check": "prettier -c .",
+    "custom:publish": "yarn && yarn build && yarn lint:fix && yarn start"
+  },
+  "engines": {
+    "node": ">=14.0.0",
+    "yarn": ">=1.22.0",
+    "npm": "please-use-yarn"
   },
   "dependencies": {
-    "next": "latest",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "autoprefixer": "^10.4.13",
+    "axios": "^0.27.2",
+    "framer-motion": "^6.3.3",
+    "moment": "^2.29.3",
+    "next": "^12.1.5",
+    "next-auth": "^3.27.0",
+    "next-shield": "^2.1.3",
+    "next-themes": "^0.1.1",
+    "next-transpile-modules": "^9.0.0",
+    "nextjs-progressbar": "^0.0.14",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-query": "^3.39.2",
+    "react-toastify": "^9.0.1",
+    "sass": "^1.51.0",
+    "screenfull": "5.1.0",
+    "socket.io-client": "2.4.0",
+    "styled-components": "^5.3.5",
+    "youtube-api-v3-search": "^1.2.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@types/node": "18.11.3",
-    "@types/react": "18.0.21",
-    "@types/react-dom": "18.0.6",
-    "autoprefixer": "^10.4.12",
-    "postcss": "^8.4.18",
+    "@babel/core": "^7.17.9",
+    "@svgr/webpack": "^6.2.1",
+    "@types/node": "^18.7.18",
+    "@types/nprogress": "^0.2.0",
+    "@types/react": "17.0.43",
+    "@types/styled-components": "^5.1.25",
+    "@types/webpack-env": "^1.16.4",
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "@typescript-eslint/parser": "^5.20.0",
+    "eslint": "8.13.0",
+    "eslint-config-next": "12.1.5",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-sort-keys-fix": "^1.1.2",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "prettier": "^2.6.2",
     "tailwindcss": "^3.2.4",
-    "typescript": "4.9.4"
+    "typescript": "4.6.3"
+  },
+  "resolutions": {
+    "webpack": "^5"
   }
 }
